fixes letter spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -155,7 +155,7 @@ input, select, textarea {
 	h2 {
 		font-size: 2em;
 		line-height: 1.5em;
-		letter-spacing: 0.45em;
+		letter-spacing: 0.35em;
 	}
 
 	h3 {
